--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
             </div>
 
             <div class="right-content">
+                <img src="ChatGPT Image 17 may 2025, 16_14_30.png" alt="Suzuki Forsa 1 Clásico" class="auto-imagen">
+             
                 <div class="form-container" id="form-step-1">
                     <h3>RESERVA TU NÚMERO</h3>
                     <p>Completa tus datos para participar en el sorteo</p>
