--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 
+
+
 </head>
 
 <body>
@@ -89,7 +91,7 @@
 
                 <!-- Contenedor 3: Solo para la imagen -->
                 <div class="contenedor-imagen">
-                    <img src="imagenes/LOGO 2 COLORES-01.png" alt="Sello" class="sello-img">
+                    <img src="imagenes/suena.png" alt="Sello" class="sello-img">
                 </div>
 
                 <!-- Resto del contenido -->
@@ -277,11 +279,10 @@
                     <p>Realiza la transferencia para confirmar tu participación</p>
 
                     <div class="datos-pago">
-                        <p><strong>Banco:</strong> Banco Nacional</p>
-                        <p><strong>Titular:</strong> JCAIZAS</p>
-                        <p><strong>Tipo de cuenta:</strong> Corriente</p>
-                        <p><strong>Número de cuenta:</strong> 1234-5678-9012-3456</p>
-                        <p><strong>Cédula/RUC:</strong> 1234567890</p>
+                        <p><strong>Banco:</strong> Banco Pichincha</p>
+                        <p><strong>Titular:</strong>Julissa Mishel Caiza </p>
+                        <p><strong>Tipo de cuenta:</strong> Ahorros </p>
+                        <p><strong>Número de cuenta:</strong>2211646347</p>
                         <p><strong>Valor por número:</strong> $3.00</p>
                         <p><strong>Total a pagar:</strong> $<span id="total-pagar">0.00</span></p>
                     </div>
@@ -492,6 +493,7 @@
 
     <!-- Script principal -->
     <script src="script.js"></script>
+    <script src="responsive.js"></script>
 
 </body>
 
